--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <!DOCTYPE html5>
 
+<meta charset="utf-8">
+<title>freshman basix</title>
+
 <p>Behold, the white horse on the hill. His name was death, and all life ends at his feet</p>
