--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html5>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>freshman basix</title>
+  </head>
+  <body>
+    <p>Behold, the white horse on the hill. His name was death, and all life ends at his feet</p>
 
-<meta charset="utf-8">
-<title>freshman basix</title>
-
-<p>Behold, the white horse on the hill. His name was death, and all life ends at his feet</p>
+  </body>
+</html>
