ancryption.html only innen html of article element + added toc file

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
           </article>
         </div>
         <div class="toc-container">
+          <h1 class="column-header">TABLE OF CONTENTS</h1>
           <aside id="toc">
-            <h1 class="column-header">TABLE OF CONTENTS</h1>
             <ul>
+              <li class="toci"> <a href="#wiki-entry">Top</a></li>
               <li class="toci"> <a href="#How to Read">How to Read</a></li>
               <ul>
                 <li class="toci"> <a href="#Practical Tips">Practical Tips</a></li>
