--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <nav id="navbar">
             <h1 class="column-header">ARTICLES</h1>
             <ul>
-              <li class="nav-item"><a href="javascript:newContent('articles/encryption.txt'); setActive('encryption')">Encryption</a></li>
-              <li class="nav-item"><a href="javascript:newContent('articles/servers-hosting.txt'); setActive('servers-hosting')">Servers & Hosting</a></li>
-              <li class="nav-item"><a href="javascript:newContent('articles/networks.txt'); setActive('networks')">Networks</a></li>
-              <li class="nav-item"><a href="javascript:newContent('articles/terminals-scripting.txt'); setActive('terminals-scripting')">Terminals & Scripting</a></li>
-              <li class="nav-item"><a href="javascript:newContent('articles/chicken-project-management.txt'); setActive('chicken-project-management')">Chicken Project Management</a></li>
+              <li class="nav-item"><a href="javascript:newContent('articles/encryption.html'); setActive('encryption')">Encryption</a></h2>
+              <li class="nav-item"><a href="javascript:newContent('articles/servers-hosting.txt'); setActive('servers-hosting')">Servers & Hosting</a></h2>
+              <li class="nav-item"><a href="javascript:newContent('articles/networks.txt'); setActive('networks')">Networks</a></h2>
+              <li class="nav-item"><a href="javascript:newContent('articles/terminals-scripting.txt'); setActive('terminals-scripting')">Terminals & Scripting</a></h2>
+              <li class="nav-item"><a href="javascript:newContent('articles/chicken-project-management.txt'); setActive('chicken-project-management')">Chicken Project Management</a></h2>
             </ul>
         </nav>
     </div>
