lists replaced with h* elements in toc

--- a/index.html
+++ b/index.html
@@ -42,46 +42,33 @@
         <div class="toc-container">
           <h1 class="column-header">CONTENTS</h1>
           <aside id="welcome-toc" class="toc">
-            <ul>
-              <li class="toci"> <a href="#banner">Top</a> </li>
-              <li class="toci"><a href="#history">History</a></li>
-              <li class="toci"><a href="#kista-mentorspace">Kista Mentorspace</a></li>
-              <li class="toci"><a href="#contact-contribute">Contact & Contribute</a></li>
-            </ul>
+            <h2><a href="#banner">- Top</a></h2>
+            <h2><a href="#history">- History</a></h2>
+            <h2><a href="#kista-mentorspace">- Kista Mentorspace</a></h2>
+            <h2><a href="#contact-contribute">- Contact & Contribute</a></h2>
           </aside>
           <aside id="encryption-toc" class="toc">
-            <ul>
-              <li class="toci"> <a href="#banner">Top</a> </li>
-              <li class="toci"> <a href="#the-key-pair-model">The Key-Pair Model</a> </li>
-              <li class="toci"> <a href="#gnu-privacy-guard">Gnu Privacy Guard</a> </li>
-            </ul>
+            <h2> <a href="#banner">Top</a> </h2>
+            <h2> <a href="#the-key-pair-model">The Key-Pair Model</a> </h2>
+            <h2> <a href="#gnu-privacy-guard">Gnu Privacy Guard</a> </h2>
           </aside>
           <aside id="servers-hosting-toc" class="toc">
-            <ul>
-              <li class="toci"> <a href="#banner">Top</a> </li>
-              <li class="toci"><a href="#client-server-model-overview">Client Server Model Overview</a></li>
-              <li class="toci"><a href="#web-servers">Web Servers</a></li>
-              <li class="toci"><a href="#ssh">Secure Socket Shell</a></li>
-              <li class="toci"><a href="#torrent-server">Torrent Server</a></li>
-              <li class="toci"><a href="#network-storage-backup">Network Storage and Backup</a></li>
-              <li class="toci"><a href="#git-server">GIT Server</a></li>
-
-            </ul>
+            <h2> <a href="#banner">- Top</a> </h2>
+            <h2><a href="#client-server-model-overview">- Client Server Model Overview</a></h2>
+            <h2><a href="#web-servers">- Web Servers</a></h2>
+            <h2><a href="#ssh">- Secure Socket Shell</a></h2>
+            <h2><a href="#torrent-server">- Torrent Server</a></h2>
+            <h2><a href="#network-storage-backup">- Network Storage and Backup</a></h2>
+            <h2><a href="#git-server">- GIT Server</a></h2>
           </aside>
           <aside id="networks-toc" class="toc">
-            <ul>
-              <li class="toci"><a href="#banner">Top</a></li>
-            </ul>
+            <h2><a href="#banner">- Top</a></h2>
           </aside>
           <aside id="terminals-scripting-toc" class="toc">
-            <ul>
-              <li class="toci"><a href="#banner">Top</a></li>
-            </ul>
+            <h2><a href="#banner">- Top</a></h2>
           </aside>
           <aside id="chicken-project-management-toc" class="toc">
-            <ul>
-              <li class="toci"><a href="#banner">Top</a></li>
-            </ul>
+            <h2><a href="#banner">- Top</a></h2>
           </aside>
 
         </div>
