consolidate page update functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <pre id="banner" onclick="javascript:newContent('articles/welcome.txt');setActive('welcome')">   /$$      /$$ /$$$$$$ /$$   /$$ /$$$$$$
+      <pre id="banner" onclick="javascript:openArticle('welcome')">   /$$      /$$ /$$$$$$ /$$   /$$ /$$$$$$
   | $$  /$ | $$|_  $$_/| $$  /$$/|_  $$_/
 | $$ /$$$| $$  | $$  | $$ /$$/   | $$
 | $$/$$ $$ $$  | $$  | $$$$$/    | $$
@@ -25,11 +25,11 @@
         <nav id="navbar">
             <h1 class="column-header">ARTICLES</h1>
             <ul>
-              <li class="nav-item"><a href="javascript:newContent('articles/encryption.html'); setActive('encryption')">Encryption</a></h2>
-              <li class="nav-item"><a href="javascript:newContent('articles/servers-hosting.txt'); setActive('servers-hosting')">Servers & Hosting</a></h2>
-              <li class="nav-item"><a href="javascript:newContent('articles/networks.txt'); setActive('networks')">Networks</a></h2>
-              <li class="nav-item"><a href="javascript:newContent('articles/terminals-scripting.txt'); setActive('terminals-scripting')">Terminals & Scripting</a></h2>
-              <li class="nav-item"><a href="javascript:newContent('articles/chicken-project-management.txt'); setActive('chicken-project-management')">Chicken Project Management</a></h2>
+              <li class="nav-item"><a href="javascript:openArticle('encryption')">Encryption</a></h2>
+              <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></h2>
+              <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></h2>
+              <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></h2>
+              <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></h2>
             </ul>
         </nav>
     </div>
