--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <nav id="navbar">
             <h1 class="column-header">ARTICLES</h1>
             <ul>
-              <li class="nav-item"><a href="javascript:openArticle('encryption')">Encryption</a></h2>
-              <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></h2>
-              <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></h2>
-              <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></h2>
-              <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></h2>
+              <li class="nav-item"><a href="javascript:openArticle('encryption')">Encryption</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li>
             </ul>
         </nav>
     </div>
