under construction notice added to calendar

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       <div class="calendar-container">
         <aside id="calendar">
             <h1 class="column-header">UPCOMING</h1>
+            <div class="temp">
+              # Under Construction #
+            </div>
         </aside>
     </div>
 
