minor streamlining of toc placeholder functionality

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- ARTICLE CONTENT -->
         <div id="wiki-entry-container">
         </div>
-        <div class="toc-container">
+        <div id="toc-container">
           <h1 class="column-header">CONTENTS</h1>
           <aside id="welcome-toc" class="toc">
             <h2><a href="#banner">- Top</a></h2>
