implement introduction section of articles with wrapped toc

--- a/index.html
+++ b/index.html
@@ -35,43 +35,8 @@
     </div>
 
       <!-- WIKI ENTRY COLUMN -->
-      <main id="core-content">
+      <main id="wiki-entry-container">
         <!-- ARTICLE CONTENT -->
-        <div id="wiki-entry-container">
-        </div>
-        <div id="toc-container">
-          <h1 class="column-header">CONTENTS</h1>
-          <aside id="welcome-toc" class="toc">
-            <h2><a href="#banner">- Top</a></h2>
-            <h2><a href="#history">- History</a></h2>
-            <h2><a href="#kista-mentorspace">- Kista Mentorspace</a></h2>
-            <h2><a href="#contact-contribute">- Contact & Contribute</a></h2>
-          </aside>
-          <aside id="encryption-toc" class="toc">
-            <h2> <a href="#banner">Top</a> </h2>
-            <h2> <a href="#the-key-pair-model">The Key-Pair Model</a> </h2>
-            <h2> <a href="#gnu-privacy-guard">Gnu Privacy Guard</a> </h2>
-          </aside>
-          <aside id="servers-hosting-toc" class="toc">
-            <h2> <a href="#banner">- Top</a> </h2>
-            <h2><a href="#client-server-model-overview">- Client Server Model Overview</a></h2>
-            <h2><a href="#web-servers">- Web Servers</a></h2>
-            <h2><a href="#ssh">- Secure Socket Shell</a></h2>
-            <h2><a href="#torrent-server">- Torrent Server</a></h2>
-            <h2><a href="#network-storage-backup">- Network Storage and Backup</a></h2>
-            <h2><a href="#git-server">- GIT Server</a></h2>
-          </aside>
-          <aside id="networks-toc" class="toc">
-            <h2><a href="#banner">- Top</a></h2>
-          </aside>
-          <aside id="terminals-scripting-toc" class="toc">
-            <h2><a href="#banner">- Top</a></h2>
-          </aside>
-          <aside id="chicken-project-management-toc" class="toc">
-            <h2><a href="#banner">- Top</a></h2>
-          </aside>
-
-        </div>
       </main>
 
       <!-- CALENDAR/UPCOMING COLUMN -->
