create and populate linux administration

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li>
               <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li>
               <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('linux-administration')">Linux Administration</a></li>
             </ul>
           </nav>
         </div>
