hid unpopulated articles

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <ul>
               <li class="nav-item"><a href="javascript:openArticle('encryption')">Encryption</a></li>
               <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li>
+              <!-- <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li> -->
               <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li>
+              <!-- <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li> -->
               <li class="nav-item"><a href="javascript:openArticle('linux-administration')">Linux Administration</a></li>
               <li class="nav-item"><a href="javascript:openArticle('kista-mentorspace')">Kista Mentorspace</a></li>
               <li class="nav-item"><a href="javascript:openArticle('contribute')">Contribute  </a></li>
