created version control wiki  entry

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li> -->
               <li class="nav-item"><a href="javascript:openArticle('linux-administration')">Linux Administration</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('version-control')">Version Control</a></li>
               <li class="nav-item"><a href="javascript:openArticle('kista-mentorspace')">Kista Mentorspace</a></li>
               <li class="nav-item"><a href="javascript:openArticle('contribute')">Contribute  </a></li>
             </ul>
