id added to navbar ul to increase specificity

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="navbar-container">
           <nav id="navbar">
             <h1 class="column-header">ARTICLES</h1>
-            <ul>
+            <ul id="nav-items">
               <li class="nav-item"><a href="javascript:openArticle('encryption')">Encryption</a></li>
               <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('web-development')">Web Development</a></li> -->
