--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul id="nav-items">
               <li class="nav-item"><a href="javascript:openArticle('encryption')">Encryption</a></li>
               <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></li>
-              <!-- <li class="nav-item"><a href="javascript:openArticle('web-development')">Web Development</a></li> -->
+              <li class="nav-item"><a href="javascript:openArticle('web-development')">Web Development</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li> -->
               <!-- <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li> -->
               <!-- <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li> -->
