--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <li class="nav-item"><a href="javascript:openArticle('linux-administration')">Linux Administration</a></li>
               <li class="nav-item"><a href="javascript:openArticle('version-control')">Version Control</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('kista-mentorspace')">Kista Mentorspace</a></li> -->
+              <li class="nav-item"><a href="javascript:openArticle('probability-statistics')">Probability & Statistics</a></li>
               <li class="nav-item"><a href="javascript:openArticle('contribute')">Contribute  </a></li>
             </ul>
           </nav>
