publish terminals-scripting article

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></li>
               <li class="nav-item"><a href="javascript:openArticle('web-development')">Web Development</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li> -->
-              <!-- <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li> -->
+              <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li> -->
               <li class="nav-item"><a href="javascript:openArticle('linux-administration')">Linux Administration</a></li>
               <li class="nav-item"><a href="javascript:openArticle('version-control')">Version Control</a></li>
