index.html capitalized nav buttons

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
           <nav id="navbar">
             <h1 class="column-header">ARTICLES</h1>
             <ul id="nav-items">
-              <li class="nav-item"><a href="javascript:openArticle('encryption')">Encryption</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">Servers & Hosting</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('web-development')">Web Development</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('encryption')">ENCRYPTION</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">SERVERS & HOSTING</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('web-development')">WEB DEVELOPMENT</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li> -->
-              <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">Terminals & Scripting</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">TERMINALS & SCRIPTING</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li> -->
-              <li class="nav-item"><a href="javascript:openArticle('linux-administration')">Linux Administration</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('version-control')">Version Control</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('linux-administration')">LINUX ADMINISTRATION</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('version-control')">VERSION CONTROL</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('kista-mentorspace')">Kista Mentorspace</a></li> -->
-              <li class="nav-item"><a href="javascript:openArticle('probability-statistics')">Probability & Statistics</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('contribute')">Contribute  </a></li>
+              <li class="nav-item"><a href="javascript:openArticle('probability-statistics')">PROBABILITY & STATISTICS</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('contribute')">CONTRIBUTE</a></li>
             </ul>
           </nav>
         </div>
