--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <li class="nav-item"><a href="javascript:openArticle('linux-administration')">LINUX ADMINISTRATION</a></li>
               <li class="nav-item"><a href="javascript:openArticle('version-control')">VERSION CONTROL</a></li>
               <!-- <li class="nav-item"><a href="javascript:openArticle('kista-mentorspace')">Kista Mentorspace</a></li> -->
+              <li class="nav-item"><a href="javascript:openArticle('editors')">EDITORS</a></li>
               <li class="nav-item"><a href="javascript:openArticle('probability-statistics')">PROBABILITY & STATISTICS</a></li>
               <li class="nav-item"><a href="javascript:openArticle('contribute')">CONTRIBUTE</a></li>
             </ul>
